--- a/CodigoFuente/x64/Orbita.VA/Orbita.VA.Funciones/Orbita.VA.Funciones.csproj
+++ b/CodigoFuente/x64/Orbita.VA/Orbita.VA.Funciones/Orbita.VA.Funciones.csproj
@@ -144,18 +144,22 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <PlatformTarget>x64</PlatformTarget>
     <OutputPath>bin\x64\Debug\</OutputPath>
+    <DocumentationFile>bin\x64\Debug\Orbita.VA.Funciones.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
     <PlatformTarget>x64</PlatformTarget>
     <OutputPath>bin\x64\Release\</OutputPath>
+    <DocumentationFile>bin\x64\Release\Orbita.VA.Funciones.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Forzar32|x64'">
     <PlatformTarget>x64</PlatformTarget>
     <OutputPath>bin\x64\Forzar32\</OutputPath>
+    <DocumentationFile>bin\x64\Forzar32\Orbita.VA.Funciones.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Ofuscado|x64'">
     <PlatformTarget>x64</PlatformTarget>
     <OutputPath>bin\x64\Ofuscado\</OutputPath>
+    <DocumentationFile>bin\x64\Ofuscado\Orbita.VA.Funciones.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="CIDARMTWrapper, Version=3.6.29.5, Culture=neutral, processorArchitecture=x86">
@@ -180,26 +184,33 @@
     </Reference>
     <Reference Include="Emgu.CV">
       <HintPath>..\..\Comun\VA\OpenCV\Emgu.CV.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="Emgu.Util">
       <HintPath>..\..\Comun\VA\OpenCV\Emgu.Util.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="Orbita.BBDD, Version=13.32.3.1, Culture=neutral, processorArchitecture=x86">
       <HintPath>..\..\Comun\Orbita\Orbita.BBDD.dll</HintPath>
       <SpecificVersion>False</SpecificVersion>
+      <Private>False</Private>
     </Reference>
     <Reference Include="Orbita.MS">
       <HintPath>..\..\Comun\Orbita\Orbita.MS.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="Orbita.Trazabilidad">
       <HintPath>..\..\Comun\Orbita\Orbita.Trazabilidad.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="Orbita.Utiles, Version=13.43.8.1, Culture=neutral, processorArchitecture=x86">
       <HintPath>..\..\Comun\Orbita\Orbita.Utiles.dll</HintPath>
       <SpecificVersion>False</SpecificVersion>
+      <Private>False</Private>
     </Reference>
     <Reference Include="Orbita.Xml">
       <HintPath>..\..\Comun\Orbita\Orbita.Xml.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="System">
       <Private>False</Private>
@@ -269,6 +280,7 @@
     <ProjectReference Include="..\Orbita.VA.Comun\Orbita.VA.Comun.csproj">
       <Project>{CC36FE63-3F16-4355-A11D-F0926DFBC977}</Project>
       <Name>Orbita.VA.Comun</Name>
+      <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup />
