--- a/CodigoFuente/x64/Orbita.VA/Orbita.VA.GeneradorEscenarios/Orbita.VA.GeneradorEscenarios.csproj
+++ b/CodigoFuente/x64/Orbita.VA/Orbita.VA.GeneradorEscenarios/Orbita.VA.GeneradorEscenarios.csproj
@@ -85,7 +85,7 @@
     <DebugSymbols>true</DebugSymbols>
     <OutputPath>bin\x64\Debug\</OutputPath>
     <DefineConstants>TRACE;DEBUG</DefineConstants>
-    <DocumentationFile>bin\Orbita.VA.GeneradorEscenarios.XML</DocumentationFile>
+    <DocumentationFile>bin\x64\Debug\Orbita.VA.GeneradorEscenarios.XML</DocumentationFile>
     <NoWarn>1591,1592,1573,1571,1570,1572</NoWarn>
     <DebugType>full</DebugType>
     <PlatformTarget>x64</PlatformTarget>
@@ -103,7 +103,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
     <OutputPath>bin\x64\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
-    <DocumentationFile>bin\Orbita.VA.GeneradorEscenarios.XML</DocumentationFile>
+    <DocumentationFile>bin\x64\Release\Orbita.VA.GeneradorEscenarios.XML</DocumentationFile>
     <Optimize>true</Optimize>
     <NoWarn>1591,1592,1573,1571,1570,1572</NoWarn>
     <DebugType>pdbonly</DebugType>
@@ -119,7 +119,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Ofuscado|x64'">
     <OutputPath>bin\x64\Ofuscado\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
-    <DocumentationFile>bin\Orbita.VA.GeneradorEscenarios.XML</DocumentationFile>
+    <DocumentationFile>bin\x64\Ofuscado\Orbita.VA.GeneradorEscenarios.XML</DocumentationFile>
     <Optimize>true</Optimize>
     <NoWarn>1591,1592,1573,1571,1570,1572</NoWarn>
     <DebugType>pdbonly</DebugType>
@@ -137,7 +137,7 @@
     <DebugSymbols>true</DebugSymbols>
     <OutputPath>bin\x86\Debug\</OutputPath>
     <DefineConstants>TRACE;DEBUG</DefineConstants>
-    <DocumentationFile>bin\Orbita.VA.GeneradorEscenarios.XML</DocumentationFile>
+    <DocumentationFile>bin\x86\Debug\Orbita.VA.GeneradorEscenarios.XML</DocumentationFile>
     <NoWarn>1591,1592,1573,1571,1570,1572</NoWarn>
     <DebugType>full</DebugType>
     <PlatformTarget>x86</PlatformTarget>
@@ -152,7 +152,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
     <OutputPath>bin\x86\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
-    <DocumentationFile>bin\Orbita.VA.GeneradorEscenarios.XML</DocumentationFile>
+    <DocumentationFile>bin\x86\Release\Orbita.VA.GeneradorEscenarios.XML</DocumentationFile>
     <Optimize>true</Optimize>
     <NoWarn>1591,1592,1573,1571,1570,1572</NoWarn>
     <DebugType>pdbonly</DebugType>
@@ -168,7 +168,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Ofuscado|x86'">
     <OutputPath>bin\x86\Ofuscado\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
-    <DocumentationFile>bin\Orbita.VA.GeneradorEscenarios.XML</DocumentationFile>
+    <DocumentationFile>bin\x86\Ofuscado\Orbita.VA.GeneradorEscenarios.XML</DocumentationFile>
     <Optimize>true</Optimize>
     <NoWarn>1591,1592,1573,1571,1570,1572</NoWarn>
     <DebugType>pdbonly</DebugType>
