--- a/CodigoFuente/x64/Orbita.VA/Orbita.VA.Hardware/Orbita.VA.Hardware.csproj
+++ b/CodigoFuente/x64/Orbita.VA/Orbita.VA.Hardware/Orbita.VA.Hardware.csproj
@@ -148,18 +148,22 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <PlatformTarget>x64</PlatformTarget>
     <OutputPath>bin\x64\Debug\</OutputPath>
+    <DocumentationFile>bin\x64\Debug\Orbita.VA.Hardware.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
     <PlatformTarget>x64</PlatformTarget>
     <OutputPath>bin\x64\Release\</OutputPath>
+    <DocumentationFile>bin\x64\Release\Orbita.VA.Hardware.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Forzar32|x64'">
     <PlatformTarget>x64</PlatformTarget>
     <OutputPath>bin\x64\Forzar32\</OutputPath>
+    <DocumentationFile>bin\x64\Forzar32\Orbita.VA.Hardware.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Ofuscado|x64'">
     <PlatformTarget>x64</PlatformTarget>
     <OutputPath>bin\x64\Ofuscado\</OutputPath>
+    <DocumentationFile>bin\x64\Ofuscado\Orbita.VA.Hardware.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Cognex.VisionPro, Version=45.0.0.0, Culture=neutral, PublicKeyToken=ef0f902af9dee505, processorArchitecture=MSIL">
