--- a/CodigoFuente/x64/Orbita.VA/Orbita.VA.MaquinasEstados/Orbita.VA.MaquinasEstados.csproj
+++ b/CodigoFuente/x64/Orbita.VA/Orbita.VA.MaquinasEstados/Orbita.VA.MaquinasEstados.csproj
@@ -144,18 +144,22 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <PlatformTarget>x64</PlatformTarget>
     <OutputPath>bin\x64\Debug\</OutputPath>
+    <DocumentationFile>bin\x64\Debug\Orbita.VA.MaquinasEstados.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
     <PlatformTarget>x64</PlatformTarget>
     <OutputPath>bin\x64\Release\</OutputPath>
+    <DocumentationFile>bin\x64\Release\Orbita.VA.MaquinasEstados.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Forzar32|x64'">
     <PlatformTarget>x64</PlatformTarget>
     <OutputPath>bin\x64\Forzar32\</OutputPath>
+    <DocumentationFile>bin\x64\Forzar32\Orbita.VA.MaquinasEstados.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Ofuscado|x64'">
     <PlatformTarget>x64</PlatformTarget>
     <OutputPath>bin\x64\Ofuscado\</OutputPath>
+    <DocumentationFile>bin\x64\Ofuscado\Orbita.VA.MaquinasEstados.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Orbita.BBDD, Version=13.32.3.1, Culture=neutral, processorArchitecture=x86">
