--- a/CodigoFuente/x32/Orbita.Controles/Orbita.Controles.Autenticacion/Orbita.Controles.Autenticacion.csproj
+++ b/CodigoFuente/x32/Orbita.Controles/Orbita.Controles.Autenticacion/Orbita.Controles.Autenticacion.csproj
@@ -14,15 +14,17 @@
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
-    <SccProjectName>%24/Librerias/CodigoFuente/x32/Orbita.Controles/Orbita.Controles.Autenticacion</SccProjectName>
-    <SccLocalPath>.</SccLocalPath>
-    <SccAuxPath>http://01x0019:8080/tfs/orbitasoftware</SccAuxPath>
-    <SccProvider>{4CA58AB2-18FA-4F8D-95D4-32DDF27D184C}</SccProvider>
+    <SccProjectName>SAK</SccProjectName>
+    <SccLocalPath>SAK</SccLocalPath>
+    <SccAuxPath>SAK</SccAuxPath>
+    <SccProvider>SAK</SccProvider>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <PlatformTarget>x86</PlatformTarget>
     <OutputPath>bin\Debug\</OutputPath>
     <DocumentationFile>bin\Debug\Orbita.Controles.Autenticacion.XML</DocumentationFile>
+    <RunCodeAnalysis>false</RunCodeAnalysis>
+    <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
     <PlatformTarget>x86</PlatformTarget>
@@ -53,6 +55,11 @@
   <ItemGroup>
     <Compile Include="Clases\App.cs" />
     <Compile Include="Clases\AppBD.cs" />
+    <Compile Include="Clases\MensajesAutenticacion.cs" />
+    <Compile Include="Clases\EstadoAutenticacionNOK.cs" />
+    <Compile Include="Clases\EstadoAutenticacionOK.cs" />
+    <Compile Include="Enumerados\BotonesAutenticacion.cs" />
+    <Compile Include="Enumerados\ResultadoAutenticacion.cs" />
     <Compile Include="Enumerados\TipoAutenticacion.cs" />
     <Compile Include="EventArgs\AutenticacionChangedEventArgs.cs" />
     <Compile Include="Formularios\FrmValidar.cs">
@@ -61,12 +68,12 @@
     <Compile Include="Formularios\FrmValidar.Designer.cs">
       <DependentUpon>FrmValidar.cs</DependentUpon>
     </Compile>
-    <Compile Include="Clases\OEstadoValidacion.cs" />
-    <Compile Include="Core\OLogonAD.cs" />
-    <Compile Include="Core\OLogonBBDD.cs" />
-    <Compile Include="Clases\OLogon.cs" />
-    <Compile Include="Core\OLogonOpenLDAP.cs" />
-    <Compile Include="Clases\OManagerValidacion.cs" />
+    <Compile Include="Clases\EstadoAutenticacion.cs" />
+    <Compile Include="Core\OLogOnActiveDirectory.cs" />
+    <Compile Include="Core\OLogOnBBDD.cs" />
+    <Compile Include="Core\OLogOn.cs" />
+    <Compile Include="Core\OLogOnOpenLDAP.cs" />
+    <Compile Include="Clases\AutenticacionManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -84,7 +91,9 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="CodeAnalysis\CodeAnalysisConfiguration.xml" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>xcopy "$(TargetDir)Orbita.Controles.Autenticacion.dll" "$(ProjectDir)\..\..\Comun\Orbita" /R /Y /I
