--- a/CodigoFuente/x32/Orbita.Controles/Orbita.Framework.Core/Orbita.Framework.Core.csproj
+++ b/CodigoFuente/x32/Orbita.Controles/Orbita.Framework.Core/Orbita.Framework.Core.csproj
@@ -56,6 +56,14 @@
     </Compile>
     <Compile Include="Interfaces\IConfiguracion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WaitWindow\WaitWindow.cs" />
+    <Compile Include="EventArgs\WaitWindowEventArgs.cs" />
+    <Compile Include="WaitWindow\WaitWindowGUI.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="WaitWindow\WaitWindowGUI.designer.cs">
+      <DependentUpon>WaitWindowGUI.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Orbita.Controles.Comunicaciones\Orbita.Controles.Comunicaciones.csproj">
@@ -66,6 +74,11 @@
       <Project>{B953E685-3E2D-4F93-BB80-805427BBB8A2}</Project>
       <Name>Orbita.Controles.Contenedores</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="WaitWindow\WaitWindowGUI.resx">
+      <DependentUpon>WaitWindowGUI.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
