--- a/CodigoFuente/x32/Orbita/Orbita.Comunicaciones/Orbita.Comunicaciones.csproj
+++ b/CodigoFuente/x32/Orbita/Orbita.Comunicaciones/Orbita.Comunicaciones.csproj
@@ -87,6 +87,18 @@
       <EmbedInteropTypes>False</EmbedInteropTypes>
       <HintPath>..\..\Comun\Comunicaciones\opcrcw.da.dll</HintPath>
     </Reference>
+    <Reference Include="Orbita.Trazabilidad, Version=13.140.3.1, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\Comun\Orbita\Orbita.Trazabilidad.dll</HintPath>
+    </Reference>
+    <Reference Include="Orbita.Utiles, Version=13.140.3.1, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\Comun\Orbita\Orbita.Utiles.dll</HintPath>
+    </Reference>
+    <Reference Include="Orbita.Winsock, Version=13.140.3.1, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\Comun\Orbita\Orbita.Winsock.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Windows.Forms" />
@@ -101,7 +113,9 @@
     <Compile Include="Dispositivos\ODispositivoMCUSB.cs" />
     <Compile Include="Dispositivos\ODispositivoSiemens1200ES.cs" />
     <Compile Include="Dispositivos\ODispositivoSiemens1200ES\ODispositivoSiemens1200ESGLPR.cs" />
+    <Compile Include="Dispositivos\ODispositivoSiemens1200ES\ODispositivoSiemens1200ESGOCR.cs" />
     <Compile Include="Dispositivos\ODispositivoSiemens1200ES\ODispositivoSiemens1200ESGOSL.cs" />
+    <Compile Include="Dispositivos\ODispositivoSiemens1200ES\ODispositivoSiemens1200ESGOSO.cs" />
     <Compile Include="Dispositivos\ODispositivoSiemens1200ES\ODispositivoSiemens1200ESGTRA.cs" />
     <Compile Include="Protocolos\ModBusTCP\OProtocoloModbusTCP.cs" />
     <Compile Include="Protocolos\OPC\Constantes\Constantes.cs" />
@@ -111,8 +125,8 @@
     <Compile Include="Protocolos\Siemens\OProtocoloTCPSiemens.cs" />
     <Compile Include="Protocolos\Siemens\OProtocoloTCPSiemensGateLPR.cs" />
     <Compile Include="Protocolos\Siemens\OProtocoloTCPSiemensGateLPROS.cs" />
-    <Compile Include="Protocolos\Siemens\OProtocoloTCPSiemensGateOCRES.cs" />
-    <Compile Include="Protocolos\Siemens\OProtocoloTCPSiemensGateOSES.cs" />
+    <Compile Include="Protocolos\Siemens\OProtocoloTCPSiemensGateOCR.cs" />
+    <Compile Include="Protocolos\Siemens\OProtocoloTCPSiemensGateOCROS.cs" />
     <Compile Include="Protocolos\Siemens\OProtocoloTCPSiemensGateTrafficES.cs" />
     <Compile Include="Protocolos\TCP\OMensajeCanal.cs" />
     <Compile Include="Protocolos\TCP\OTCPListener.cs" />
@@ -159,20 +173,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagramComs.cd" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Orbita.Trazabilidad\Orbita.Trazabilidad.csproj">
-      <Project>{1A2EEC44-A494-4BA6-A591-267B73A55CD1}</Project>
-      <Name>Orbita.Trazabilidad</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Orbita.Utiles\Orbita.Utiles.csproj">
-      <Project>{DAD5D2A3-9C23-4C22-ABEB-4DF8258170AD}</Project>
-      <Name>Orbita.Utiles</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Orbita.Winsock\Orbita.Winsock.vbproj">
-      <Project>{71BD7FF7-F873-49B9-8DC2-C41F909D7300}</Project>
-      <Name>Orbita.Winsock</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
