--- a/CodigoFuente/x32/Orbita.Controles/Orbita.Controles.Autenticacion/Orbita.Controles.Autenticacion.csproj
+++ b/CodigoFuente/x32/Orbita.Controles/Orbita.Controles.Autenticacion/Orbita.Controles.Autenticacion.csproj
@@ -62,11 +62,11 @@
     <Compile Include="Enumerados\ResultadoAutenticacion.cs" />
     <Compile Include="Enumerados\TipoAutenticacion.cs" />
     <Compile Include="EventArgs\AutenticacionChangedEventArgs.cs" />
-    <Compile Include="Formularios\FrmValidar.cs">
+    <Compile Include="Formularios\FrmAutenticacion.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Formularios\FrmValidar.Designer.cs">
-      <DependentUpon>FrmValidar.cs</DependentUpon>
+    <Compile Include="Formularios\FrmAutenticacion.Designer.cs">
+      <DependentUpon>FrmAutenticacion.cs</DependentUpon>
     </Compile>
     <Compile Include="Clases\EstadoAutenticacion.cs" />
     <Compile Include="Core\OLogOnActiveDirectory.cs" />
@@ -83,8 +83,8 @@
     <Service Include="{94E38DFF-614B-4cbd-B67C-F211BB35CE8B}" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Formularios\FrmValidar.resx">
-      <DependentUpon>FrmValidar.cs</DependentUpon>
+    <EmbeddedResource Include="Formularios\FrmAutenticacion.resx">
+      <DependentUpon>FrmAutenticacion.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
