--- a/CodigoFuente/x32/Orbita.Controles/Orbita.Controles.Autenticacion/Orbita.Controles.Autenticacion.csproj
+++ b/CodigoFuente/x32/Orbita.Controles/Orbita.Controles.Autenticacion/Orbita.Controles.Autenticacion.csproj
@@ -69,10 +69,10 @@
       <DependentUpon>FrmAutenticacion.cs</DependentUpon>
     </Compile>
     <Compile Include="Clases\EstadoAutenticacion.cs" />
-    <Compile Include="Core\OLogOnActiveDirectory.cs" />
-    <Compile Include="Core\OLogOnBBDD.cs" />
-    <Compile Include="Core\OLogOn.cs" />
-    <Compile Include="Core\OLogOnOpenLDAP.cs" />
+    <Compile Include="Core\OLogonActiveDirectory.cs" />
+    <Compile Include="Core\OLogonBBDD.cs" />
+    <Compile Include="Core\OLogon.cs" />
+    <Compile Include="Core\OLogonOpenLDAP.cs" />
     <Compile Include="Clases\AutenticacionManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
