--- a/CodigoFuente/x32/Orbita/Orbita.Comunicaciones/Orbita.Comunicaciones.csproj
+++ b/CodigoFuente/x32/Orbita/Orbita.Comunicaciones/Orbita.Comunicaciones.csproj
@@ -87,18 +87,6 @@
       <EmbedInteropTypes>False</EmbedInteropTypes>
       <HintPath>..\..\Comun\Comunicaciones\opcrcw.da.dll</HintPath>
     </Reference>
-    <Reference Include="Orbita.Trazabilidad, Version=13.140.3.1, Culture=neutral, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Comun\Orbita\Orbita.Trazabilidad.dll</HintPath>
-    </Reference>
-    <Reference Include="Orbita.Utiles, Version=13.140.3.1, Culture=neutral, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Comun\Orbita\Orbita.Utiles.dll</HintPath>
-    </Reference>
-    <Reference Include="Orbita.Winsock, Version=13.140.3.1, Culture=neutral, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Comun\Orbita\Orbita.Winsock.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Windows.Forms" />
@@ -173,6 +161,20 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagramComs.cd" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Orbita.Trazabilidad\Orbita.Trazabilidad.csproj">
+      <Project>{1A2EEC44-A494-4BA6-A591-267B73A55CD1}</Project>
+      <Name>Orbita.Trazabilidad</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Orbita.Utiles\Orbita.Utiles.csproj">
+      <Project>{DAD5D2A3-9C23-4C22-ABEB-4DF8258170AD}</Project>
+      <Name>Orbita.Utiles</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Orbita.Winsock\Orbita.Winsock.vbproj">
+      <Project>{71BD7FF7-F873-49B9-8DC2-C41F909D7300}</Project>
+      <Name>Orbita.Winsock</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
